--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
+    <nav>
+        <a href="pages/about.html"> About</a>
+        <a href="pages/terms.html">Terms and conditions</a>
+        <nav><a href="../index.html">Go to previous page!</a></nav>
+        <p>This is the about page!</p>
+        
+     </nav>
     <p>Hello world!</p>
 </body>
+
 </html>
