--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 
 <body>
     <nav>
-        <a href="pages/about.html">About</a>
-        <a href="pages/terms.html">Terms and conditions</a>
+        <a href="pages/about.html"> About</a>
+        <a href="pages/terms.html">Terms and conditions</a>                
     </nav>
-
+    <p>Hello world!</p>
 </body>
-
 </html>
