--- a/index.html
+++ b/index.html
@@ -5,14 +5,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   
+    <meta property="title" content="Whoopsy!" />
+    <meta property="description" content="Hooptie!" />
+    <link rel="canonical" href="https://artcontempo.github.io/" />
+   
+    <meta property="og:title" content="Some amazing og:title here!" />
+    <meta property="og:description" content="Your entertaining and descriptive copy here, if your meta description is good, use it." />
+    <meta property="og:image" content="https://i.imgur.com/7Rcu58f.jpg" />
+
     <title>Document</title>
 </head>
 
 <body>
     <nav>
         <a href="pages/about.html"> About</a>
-        <a href="pages/terms.html">Terms and conditions</a>                
+        <a href="pages/terms.html">Terms and conditions</a>
     </nav>
     <p>Hello world!</p>
 </body>
+
 </html>
