--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta property="description" content="Hooptie!" />
     <link rel="canonical" href="https://artcontempo.github.io/" />
    
-    <meta property="og:title" content="Some amazing og:title here!" />
-    <meta property="og:description" content="Your entertaining and descriptive copy here, if your meta description is good, use it." />
+    <meta property="og:title" content="Puiku sugebėti nutapyti kokį ypatingą paveikslą." />
+    <meta property="og:description" content="Meno kūriniuose nerasime užfiksuotų privalomų elgesio taisyklių, paliepimų ar draudimų. Tačiau juose pateikiami žmonių elgesio pavyzdžiai." />
     <meta property="og:image" content="https://i.imgur.com/7Rcu58f.jpg" />
 
     <title>Document</title>
