--- a/index.html
+++ b/index.html
@@ -10,10 +10,19 @@
     <meta property="description" content="Hooptie!" />
     <link rel="canonical" href="https://artcontempo.github.io/" />
    
-    <meta property="og:title" content="Puiku sugebėti nutapyti kokį ypatingą paveikslą." />
+    <meta property="og:title" content="Puiku būtų nutapyti kokį paveikslą?" />
     <meta property="og:description" content="Meno kūriniuose nerasime užfiksuotų privalomų elgesio taisyklių, paliepimų ar draudimų. Tačiau juose pateikiami žmonių elgesio pavyzdžiai." />
     <meta property="og:image" content="https://i.imgur.com/7Rcu58f.jpg" />
 
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'GA_MEASUREMENT_ID');
+    </script>
     <title>Document</title>
 </head>
 
