--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <meta property="og:image" content="https://i.imgur.com/7Rcu58f.jpg" />
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=GTM-T24HJP4"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'GA_MEASUREMENT_ID');
+      gtag('config', 'GTM-T24HJP4');
     </script>
     <title>Document</title>
 </head>
