--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <meta property="og:description" content="Meno kūriniuose nerasime užfiksuotų privalomų elgesio taisyklių, paliepimų ar draudimų. Tačiau juose pateikiami žmonių elgesio pavyzdžiai." />
     <meta property="og:image" content="https://i.imgur.com/7Rcu58f.jpg" />
 
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=GTM-T24HJP4"></script>
+         <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-E4JM4RGMFK"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'GTM-T24HJP4');
+      gtag('config', 'G-E4JM4RGMFK');
     </script>
     <title>Document</title>
 </head>
