--- a/index.html
+++ b/index.html
@@ -5,33 +5,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
-    <meta property="title" content="Whoopsy!" />
-    <meta property="description" content="Hooptie!" />
-    <link rel="canonical" href="https://artcontempo.github.io/" />
-   
-    <meta property="og:title" content="Puiku būtų nutapyti kokį paveikslą?" />
-    <meta property="og:description" content="Meno kūriniuose nerasime užfiksuotų privalomų elgesio taisyklių, paliepimų ar draudimų. Tačiau juose pateikiami žmonių elgesio pavyzdžiai." />
-    <meta property="og:image" content="https://i.imgur.com/7Rcu58f.jpg" />
+    <title>Frida Kahlo</title>
+    <style>
+        body {
+            color: blueviolet;
+            background: goldenrod;
+            text-align: left;
+            font-family: "Lucida Console", "Courier New", monospace;
+        }
 
-         <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-E4JM4RGMFK"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+        h1, h3{
+            color: purple;
+            text-align: center;
+        }
 
-      gtag('config', 'G-E4JM4RGMFK');
-    </script>
-    <title>Document</title>
+        img {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    </style>
+
 </head>
 
 <body>
-    <nav>
-        <a href="pages/about.html"> About</a>
-        <a href="pages/terms.html">Terms and conditions</a>
-    </nav>
-    <p>Hello world!</p>
+    <h1>FRIDA KAHLO - viena geriausiai žinomų menininkių.</h1>
+    <h3>(1907 – 1954)</h3>
+    <img src="https://i.guim.co.uk/img/media/8d1483b028d86d43b7d17f01bd808d116df5555c/0_394_2251_1350/master/2251.jpg?width=1200&height=900&quality=85&auto=format&fit=crop&s=57aeb420ab1b9c3f952e0e725538fc18"
+        alt="Frida Kahlo portretas">
+    <br>
+    <p> <a href="https://lt.wikipedia.org/wiki/Frida_Kahlo" target="_blank"
+            style="color: purple; text-align: center;">Frida Kahlo</a> -viena garsiausių Meksikos dailininkių, realizmo,
+        siurrealizmo ir simbolizmo atstovė. Daugumos darbų herojė - ji pati. Pagrindinė ne itin gausaus palikimo dalis ir yra jos autotportretai.</p>
+
 </body>
 
 </html>
