--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Frida Kahlo</title><meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Frida_Kahlo />
+    <meta property="og:description" content="Paskaitykime apie Frida Kahlo." />
+    <meta property="og:image" content="https://static01.nyt.com/images/2020/03/29/books/review/29Burke-sub/03Burke-sub-mediumSquareAt3X-v2.jpg" />
     <title>Frida Kahlo</title>
     <style>
         body {
