--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
         }
 
         .nav a {
-            /* border: 2px solid red;
-  padding: 10px; */
-            border-radius: 25px;
+             border: 2px;
+             padding: 10px;
+             border-radius: 25px;
         }
     </style>
 </head>
