--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap');
+    </style>
+    <style>
         .nav ul {
-            *zoom: 1;
+            zoom: 1;
             list-style: none;
             margin: 0;
             padding: 0;
@@ -81,9 +84,9 @@
         }
 
         .nav a {
-             border: 2px;
-             padding: 10px;
-             border-radius: 25px;
+            border: 2px;
+            padding: 10px;
+            border-radius: 25px;
         }
     </style>
 </head>
@@ -91,6 +94,30 @@
 <body>
     <nav class="nav">
         <ul>
+            <li>
+                <a href="#">Nav Item</a>
+                <ul>
+                    <li><a href="#">Subnav Item</a></li>
+                    <li><a href="#">Subnav Item</a></li>
+                    <li><a href="#">Subnav Item</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="#">Nav Item</a>
+                <ul>
+                    <li><a href="#">Subnav Item</a></li>
+                    <li><a href="#">Subnav Item</a></li>
+                    <li><a href="#">Subnav Item</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="#">Nav Item</a>
+                <ul>
+                    <li><a href="#">Subnav Item</a></li>
+                    <li><a href="#">Subnav Item</a></li>
+                    <li><a href="#">Subnav Item</a></li>
+                </ul>
+            </li>
             <li>
                 <a href="#">Nav Item</a>
                 <ul>
