--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             margin: 0;
             padding: 0;
             background: #333;
+            width: fit-content;
         }
 
         .nav ul:before,
