--- a/index.html
+++ b/index.html
@@ -136,6 +136,13 @@
                     </tr>
                     <tr>
                         <td class="works-table-picture-col"><img
+                                src="https://www.fridakahlo.org/images/paintings/me-and-my-parrots.jpg"
+                                alt="Me and My Parrot"></td>
+                        <td class="works-table-title-col">Me and My Parrot</td>
+                        <td>1941</td>
+                    </tr>
+                    <tr>
+                        <td class="works-table-picture-col"><img
                                 src="https://www.fridakahlo.org/images/paintings/viva-la-vida-watermelons.jpg"
                                 alt="Viva la Vida, Watermelons"></td>
                         <td class="works-table-title-col">Viva la Vida, Watermelons</td>
