--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
 <body>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap');
 
         body {
             background: orange;
-            font-family: 'Balsamiq Sans', cursive;
+            font-family: 'Hammersmith One', sans-serif;
         }
 
         img {
@@ -158,9 +158,9 @@
         <label for="tab3">Šaltiniai</label>
         <div class="tab">
             <h2>Šaltiniai:</h2>
-            <p>
-               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi aperiam facere quod officia maxime quam.
-               
+             <p>
+            <ul><li><a href="https://www.fridakahlo.org/" target="_blank">fridakahlo.org</a></li></ul>
+            <ul><li><a href="https://en.wikipedia.org/wiki/Frida_Kahlo" target="_blank">wikipedia.org</a></li></ul>
             </p>
         </div>
     </div>
