--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap');
 
         body {
-            background: orange;
+            background: rgb(202, 114, 180);
             font-family: 'Hammersmith One', sans-serif;
         }
 
