--- a/index.html
+++ b/index.html
@@ -99,9 +99,8 @@
                     alt="Frida Kahlo portretas">
                 <p class="content-about-text">
                     <a href="https://lt.wikipedia.org/wiki/Frida_Kahlo" target="_blank">Frida Kahlo</a> (1907-1954) - viena
-                    garsiausių Meksikos dailininkių, realizmo, siurrealizmo ir simbolizmo atstovė. Daugumos darbų herojė
-                    - ji pati. Pagrindinė ne itin gausaus
-                    palikimo dalis ir yra jos autotportretai.
+                    garsiausių Meksikos dailininkių, realizmo, siurrealizmo ir simbolizmo atstovė. Daugumos darbų herojė - ji pati. Pagrindinė ne itin gausaus
+                    palikimo dalis ir yra jos autotportretai. Ankstesniuose savo atvaizduose ji remiasi Italijos renesanso portreto tradicija, bet vėlesniuose neišskiriamai suaudžia realizmą ir išmonę. Sykiu Kahlo viešąjį "aš" sulydo su vidine savo esatimi. Taip ji suaktyvina daugybę temų: jos vaidmuo, fizinis pažeidžiamumas, meksikietiška tapatybė ir galiausiai jos vieta pasaulyje.
                 </p>
             </section>
         </div>
