--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 
         .content-about-text {
             padding-left: 10px;
+            text-align: justify;
         }
 
         .works-table-picture-col {
